# Antares2

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  CLAUDE.md  README.md  README.zh-TW.md  components.json  index.html  package-lock.json  package.json  pencil-new.pen  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.server.json  untitled1  vite.config.ts
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json
.claude/commands/: release-version-bump-and-tag.md  release-workflow-yml-update.md  updater-plugin-wiring-and-documentation.md
.codex/: AGENTS.md
.github/workflows/: build-beta.yml  build.yml  codeql-analysis.yml  create-artifact-linux-arm64.yml  create-artifact-linux.yml  create-artifact-macos.yml  create-artifact-windows-appx.yml  create-generated-sources.yml  release.yml  test-build.yml  test-builds.yml  test-e2e-win.yml
docs/: release-notes-v0.8.1.md  release-notes-v0.8.2.md  release-notes-v0.8.3.md  release-notes-v0.8.4.md  ui-spec.md
e2e/: mssql-database-switch.spec.ts  mssql-empty-table-header.spec.ts  mssql-limit-guards.spec.ts
e2e-results/report/: index.html
scripts/: build-msi.mjs  build-sidecar.mjs  check-eol.mjs  checkTauriMigration.js  checkTauriMigration.ts  migrate-appdata.mjs  release.mjs  stage-resources.mjs  tauri-build.mjs  translationCheck.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/old/: icon.icoold
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/common/: shortcuts.ts
src/main/: server.ts
(+340 files in other folders)
