[package]
name = "antares2"
version = "0.8.3"
description = "A modern, fast SQL client"
authors = ["TW199501"]
edition = "2021"

[lib]
name = "antares2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sidecar.rs uses libc::kill on macOS/Linux to terminate the Node child process.
# Windows uses taskkill (no crate needed). Scoping to cfg(unix) keeps Windows
# builds from pulling libc.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
